--- a/style.css
+++ b/style.css
@@ -108,6 +108,7 @@ nav {
 }
 .nav-active {
   transform: translateX(0%);
+  z-index: 10;
 }
 
 @keyframes navLinkFade {
@@ -189,7 +190,7 @@ a {
   display: inherit;
   justify-content: space-evenly;
   align-items: baseline;
-  padding: 5%;
+  padding: 2%;
   padding-top: 0px;
   scroll-padding-bottom: 0px;
   background-color: var(--rps-color1);
