--- a/style.css
+++ b/style.css
@@ -19,14 +19,14 @@
 
 body {
   background-color: var(--color-black);
-  line-height: 3.8vh;
+  line-height: 6vh;
   /* overflow-x: hidden; */
 }
 
 .wrapper {
   width: 100%;
   height: 100vh;
-  overflow-x: hidden;
+  overflow: hidden;
   position: relative;
 }
 
@@ -42,6 +42,7 @@ nav {
   min-height: 8vh;
   background-color: var(--color-dark);
   padding: 3vh;
+  line-height: 3vh;
 }
 
 .logo {
@@ -54,6 +55,7 @@ nav {
   display: flex;
   justify-content: space-around;
   color: var(--color-light);
+  padding: 6vh 0 6vh 0;
   width: 60%;
 }
 
@@ -86,6 +88,7 @@ nav {
   }
 
   .nav-links {
+    /* color: red; */
     background-color: var(--color-dark);
     position: absolute;
     right: 0px;
@@ -99,7 +102,7 @@ nav {
     transition: transform 0.1s ease-in;
   }
   .nav-links li {
-    opacity: 0%;
+    opacity: 100%;
   }
   .burger {
     display: block;
@@ -108,7 +111,13 @@ nav {
 }
 .nav-active {
   transform: translateX(0%);
+  margin-top: 4vh;
   z-index: 10;
+}
+
+.navAnim {
+  animation-name: navLinkFade;
+  animation-duration: 1s;
 }
 
 @keyframes navLinkFade {
@@ -121,6 +130,8 @@ nav {
     transform: translateX(0px);
   }
 }
+
+/* burger divs animation */
 
 .toggle .line1 {
   transform: rotate(-45deg) translate(-5px, 6px);
