--- a/src/pages/styles/global.css
+++ b/src/pages/styles/global.css
@@ -1,4 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@100&display=swap");
 :root {
   --color-light: #cecece;
   --color-dark: #0b1d31;
@@ -17,9 +16,29 @@
   letter-spacing: 0.1vw;
 }
 
+/* body */
+
 body {
   background-color: var(--color-black);
   line-height: 4vh;
+}
+
+a {
+  color: var(--color-light);
+  text-decoration-line: underline;
+  text-decoration-style: dotted;
+  text-underline-offset: 5px;
+}
+
+.main {
+  margin: 40px;
+  color: var(--color-light);
+  width: 80%;
+}
+
+.title,
+.subtitle {
+  font-weight: strong;
 }
 
 .wrapper {
@@ -42,6 +61,14 @@ ul {
   list-style: circle;
   font-size: 1.2rem;
 }
+
+/* header */
+
+.topHeader {
+  display: flex;
+}
+
+/* nav */
 
 nav {
   display: flex;
@@ -72,7 +99,6 @@ nav {
 }
 
 .nav-links a {
-  /* color: var(--color-light); */
   text-decoration: none;
 }
 
@@ -90,33 +116,6 @@ nav {
   transition: all 0.3s ease;
 }
 
-@media screen and (max-width: 760px) {
-  body {
-    overflow-x: hidden;
-  }
-
-  .nav-links {
-    /* color: red; */
-    background-color: var(--color-dark);
-    position: absolute;
-    right: 0px;
-    height: 92vh;
-    top: 8vh;
-    flex-direction: column;
-    align-items: center;
-    width: 100%;
-    /* opacity: 100%; */
-    transform: translateX(100%);
-    transition: transform 0.1s ease-in;
-  }
-  .nav-links li {
-    opacity: 100%;
-  }
-  .burger {
-    display: block;
-    cursor: pointer;
-  }
-}
 .nav-active {
   transform: translateX(0%);
   margin-top: 4vh;
@@ -126,17 +125,6 @@ nav {
 .navAnim {
   animation-name: navLinkFade;
   animation-duration: 1s;
-}
-
-@keyframes navLinkFade {
-  from {
-    opacity: 0;
-    transform: translateX(50px);
-  }
-  to {
-    opacity: 1;
-    transform: translateX(0px);
-  }
 }
 
 /* burger divs animation */
@@ -153,26 +141,57 @@ nav {
   transform: rotate(45deg) translate(-5px, -6px);
 }
 
-/* body */
+/* footer */
 
-a {
+.footer {
   color: var(--color-light);
-  text-decoration-line: underline;
-  text-decoration-style: dotted;
-  text-underline-offset: 5px;
+  background-color: var(--color-dark);
+  padding: 2vw;
+  text-align: right;
 }
 
-.main {
-  margin: 40px;
-  color: var(--color-light);
-  width: 80%;
+/* media queries */
+
+@media screen and (max-width: 760px) {
+  body {
+    overflow-x: hidden;
+  }
+
+  .nav-links {
+    background-color: var(--color-dark);
+    position: absolute;
+    right: 0px;
+    height: 92vh;
+    top: 8vh;
+    flex-direction: column;
+    align-items: center;
+    width: 100%;
+    transform: translateX(100%);
+    transition: transform 0.1s ease-in;
+  }
+  .nav-links li {
+    opacity: 100%;
+  }
+  .burger {
+    display: block;
+    cursor: pointer;
+  }
 }
 
-.title,
-.subtitle {
-  font-weight: strong;
+/* animations */
+
+@keyframes navLinkFade {
+  from {
+    opacity: 0;
+    transform: translateX(50px);
+  }
+  to {
+    opacity: 1;
+    transform: translateX(0px);
+  }
 }
 
+/* rps flashing */
 @keyframes flashing {
   0% {
     background-color: var(--rps-color2);
@@ -181,4 +200,10 @@ a {
   100% {
     opacity: 1;
   }
+}
+
+/* development */
+
+.testbtn {
+  font-size: 12px;
 }
