--- a/src/pages/styles/global.css
+++ b/src/pages/styles/global.css
@@ -1,6 +1,6 @@
 :root {
   --color-light: #cecece;
-  --color-dark: #0b1d31;
+  --color-dark: #235288;
   --color-black: #161616;
   --rps-color1: #0b1d31;
   --rps-color2: #33c474;
@@ -20,14 +20,14 @@
 
 body {
   background-color: var(--color-black);
-  line-height: 4vh;
+  line-height: clamp(15px, 4vh, 30px);
 }
 
 a {
   color: var(--color-light);
   text-decoration-line: underline;
   text-decoration-style: dotted;
-  text-underline-offset: 5px;
+  text-underline-offset: 0.5rem;
 }
 
 .main {
@@ -41,11 +41,21 @@ a {
   font-weight: strong;
 }
 
+.logo > a {
+  text-decoration: none;
+}
+
 .wrapper {
   width: 100%;
-  height: 100vh;
-  overflow-x: hidden;
+  padding: 2rem;
+  height: auto;
+  margin-bottom: clamp(10vh, 40px, 15vh);
+  /* overflow: hidden; */
   position: relative;
+}
+
+.wrapperHide {
+  display: none;
 }
 
 h1 {
@@ -67,13 +77,11 @@ ul {
 .topHeader {
   display: flex;
   justify-content: right;
-  border: 1px solid red;
   align-items: center;
   height: clamp(2rem, 10vh, 8rem);
   background-color: var(--color-dark);
   padding: 3vh;
   line-height: 3vh;
-  border: 1px solid yellow;
   z-index: -52;
 }
 
@@ -81,7 +89,6 @@ ul {
   position: absolute;
   left: 10px;
   color: var(--color-light);
-  border: 1px solid dodgerblue;
 }
 /* nav */
 
@@ -92,7 +99,7 @@ nav {
 
 .navLinksSide {
   position: absolute;
-  top: 8rem;
+  top: clamp(2rem, 10vh, 8rem);
   left: 0rem;
   height: 80vh;
   width: 100%;
@@ -105,7 +112,6 @@ nav {
   padding: 1rem;
   list-style: none;
   z-index: 50;
-  border: 1px solid green;
   overflow: hidden;
   /* opacity: 0.5; */
 }
@@ -116,7 +122,6 @@ nav {
 
 .burger {
   cursor: pointer;
-  border: 1px solid salmon;
   color: var(--color-light);
   z-index: 51;
 }
@@ -135,8 +140,12 @@ nav {
 /* footer */
 
 .footer {
-  position: relative;
-  bottom: 0;
+  /* display: none; */
+  position: fixed;
+  bottom: 0px;
+  width: 100%;
+  height: clamp(10vh, 40px, 15vh);
+  margin-top: auto;
   color: var(--color-light);
   background-color: var(--color-dark);
   padding: 2rem;
